    * fixed auto-insertion of lavc encoder (for DXR2/3 and DVB)
    * new option: -idle, to make MPlayer wait for input commands when
      done playing all files
    * lots of new slave commands (check DOCS/tech/slave.txt)
    * lots of new information provided by the -identify option
    * fixed ugly looking OSD with -vo gl2 and MMX


  pre7try2: August 26, 2005

    Security:
    * heap overflow in PCM audio decoder fixed


  pre7: "PatentCounter" April 16, 2005

    Security:
    * heap overflow in Real RTSP streaming code fixed
    * buffer overflow in MMST streaming code fixed


    DOCS:
    * Czech documentation translation in progress
    * German man page almost synced
    * slave mode command documentation finished
    * TOOLS documented in TOOLS/README
    * audio filter documentation moved to the man page and updated
    * all audio filters documented
    * improved encoding guide
    * preliminary documentation for Snow codec in DOCS/tech/snow.txt
    * misc updates and fixes all over the place

    Ports:
    * DirectX video output fixed on Windows95
    * DirectX video output now supports 256 color mode
    * audio device selection support for dsound audio output driver
    * --enable-macosx-bundle, use config directory in the appwrapper on OS X
    * Sun audio output cleanup
    * x86_64 support fixes
    * OpenBSD support in libdha
    * VIDIX support for more Radeon 9200 models

    Drivers:
    * fixed ontop event for some window managers
    * audio output layer cleanup
    * unified colorkey handling code
    * vo_xvmc panscan fix
    * fixed some X11 crashes
    * OSD fixes in various video output drivers

    Decoders:
    * TWinVQ decoder via binary DLL
    * integrated Tremor decoder for Ogg/Vorbis
    * fixed decoding of stereo alaw files
    * preload QT DLLs to work around problems with their hardcoded paths
    * support for Real 10 RV30/40 Linux binary codec (fixes some RV40 files)
    * expose support for 422P and 444P raw formats